--- a/good (10).html
+++ b/good (10).html
@@ -1298,5 +1298,29 @@ const response = await cartesia.sonic({
             updateScenario();
         });
     </script>
+    <!-- put this once, anywhere above </body> -->
+<audio id="hume-audio" src="hume-pain-assessment.mp3" preload="auto"></audio>
+
+<script>
+  // Make it GLOBAL so inline onclick can find it
+  window.playAudio = function (_key, evt) {
+    try {
+      evt && evt.preventDefault?.();
+
+      const audio = document.getElementById('hume-audio');
+      if (!audio) return;
+
+      // optional: always start from the beginning
+      audio.currentTime = 0;
+
+      // play and swallow the promise to avoid unhandled rejections
+      const p = audio.play();
+      if (p && typeof p.catch === 'function') p.catch(() => {});
+    } catch (e) {
+      console.error('playAudio error:', e);
+    }
+  };
+</script>
+
 </body>
 </html>
