--- a/good (3).html
+++ b/good (3).html
@@ -1360,24 +1360,32 @@ const response = await cartesia.sonic({
     <!-- put this once, anywhere above </body> -->
 <audio id="hume-audio" src="hume-pain-assessment.mp3" preload="auto"></audio>
 
+<audio id="hume-audio" src="hume-pain-assessment.mp3" preload="auto"></audio>
+<audio id="cartesia-audio" src="cartesia-pain-assessment.mp3" preload="auto"></audio>
+<audio id="elevenlabs-audio" src="elevenlabs-pain-assessment.mp3" preload="auto"></audio>
+
 <script>
-  // Make it GLOBAL so inline onclick can find it
-  window.playAudio = function (_key, evt) {
-    try {
-      evt && evt.preventDefault?.();
+  // Global function so your existing buttons still work
+  window.playAudio = function (key, evt) {
+    evt?.preventDefault();
 
-      const audio = document.getElementById('hume-audio');
-      if (!audio) return;
+    // map button keys to audio elements
+    const audioMap = {
+      hume: document.getElementById('hume-audio'),
+      cartesia: document.getElementById('cartesia-audio'),
+      elevenlabs: document.getElementById('elevenlabs-audio')
+    };
 
-      // optional: always start from the beginning
-      audio.currentTime = 0;
+    // pause and reset all audios first
+    Object.values(audioMap).forEach(a => { 
+      if (a) { a.pause(); a.currentTime = 0; } 
+    });
 
-      // play and swallow the promise to avoid unhandled rejections
-      const p = audio.play();
-      if (p && typeof p.catch === 'function') p.catch(() => {});
-    } catch (e) {
-      console.error('playAudio error:', e);
-    }
+    // play the one that was clicked
+    const audio = audioMap[key];
+    if (!audio) return;
+    const p = audio.play();
+    if (p && typeof p.catch === 'function') p.catch(() => {});
   };
 </script>
     
